# MLCompilerBridge

./: CMakeLists.txt  README copy.md  README.md
MLModelRunner/: PipeModelRunner.cpp
MLModelRunner/C/: PipeModelRunnerCWrapper.cpp
MLModelRunner/ONNXModelRunner/: CMakeLists.txt
MLModelRunner/gRPCModelRunner/: CMakeLists.txt
SerDes/: CMakeLists.txt  TensorSpec.cpp  bitstreamSerDes.cpp  jsonSerDes.cpp
cmake/modules/: FindOnnxruntime.cmake
include/MLModelRunner/: MLModelRunner.h  PipeModelRunner.h  TFModelRunner.h  gRPCModelRunner.h
include/SerDes/: TensorSpec.h  baseSerDes.h  bitstreamSerDes.h  jsonSerDes.h  protobufSerDes.h  tensorflowSerDes.h
test/: MLBridgeTest.cpp
